# avifile

./: ChangeLog  INSTALL  Makefile.am  Makefile.in  README.md  acinclude.m4  autogen.sh  avifile-config.in  avifile.pc  avifile.pc.in  avifile.spec.in  configure  configure.in
admin/: Makefile.am  Makefile.in  am_edit  strip_fPIC.sh  version.sh
doc/: CREDITS  EXCEPTIONS  FreeBSD  KNOWN_BUGS  LICENSING  Makefile.am  Makefile.in  README-DEVEL  TODO  VIDEO-PERFORMANCE  WARNINGS  avibench.1  avicap.1  avicat.1  avifile-config.1  avimake.1  aviplay.1  avirec.1  avirecompress.1  avitype.1  kv4lsetup.1
doc/avicap/: Makefile.am  Makefile.in  avicap.html  configuration.html  epg.html  shutdown_resume.html  timertable.html
drivers/: Makefile.am  Makefile.in  README  mga_vid.c  mga_vid.h  mga_vid_test.c
drivers/libdha/: Makefile.am  Makefile.in  libdha.h  mmi.c  pci_names.c
drivers/libdha/kernelhelper/: Makefile.am  Makefile.in
drivers/libdha/oth/: Makefile.am  Makefile.in  pci.db
drivers/libdha/sysdep/: Makefile.am  Makefile.in
drivers/vidix/: Makefile.am  Makefile.in  vidix.h  vidixlib.c
drivers/vidix/drivers/: Makefile.am  Makefile.in  mach64_vid.c  mga_crtc2_vid.c  mga_vid.c  pm3_vid.c  radeon_vid.c  rage128_vid.c
ffmpeg/: Makefile.am  Makefile.in  libavcodec-uninstalled.pc  libavcodec.pc  libavformat-uninstalled.pc  libavformat.pc
ffmpeg/libavcodec/: Makefile.am  Makefile.in  avcodec.c
ffmpeg/libavcodec/alpha/: Makefile.am  Makefile.in
ffmpeg/libavcodec/armv4l/: Makefile.am  Makefile.in
ffmpeg/libavcodec/i386/: Makefile.am  Makefile.in  dsputil_mmx.c
ffmpeg/libavcodec/liba52/: Makefile.am  Makefile.in
ffmpeg/libavformat/: Makefile.am  Makefile.in
ffmpeg/libavutil/: Makefile.am  Makefile.in
include/: Locker.h  Makefile.am  Makefile.in  StreamInfo.h  VideoDPMS.h  audiodecoder.h  audioencoder.h  avifile.h  aviplay.h  avm_args.h  avm_cpuinfo.h  avm_creators.h  avm_default.h  avm_except.h  avm_fourcc.h  avm_locker.h  avm_map.h  avm_output.h  avm_stl.h  config.h.in  configfile.h  cpuinfo.h  creators.h  default.h  except.h  formats.h  fourcc.h  image.h  infotypes.h  mmx.h  playerwidget.h  plugin.h  renderer.h  subtitle.h  utils.h  vbrctrl.h  version.h  videodecoder.h  videoencoder.h
lib/: Makefile.am  Makefile.in  Uncompressed.cpp  Uncompressed.h  codeckeeper.cpp  libaviplay.cpp
lib/aviplay/: AudioCleaner.cpp  AudioCleaner.h  AudioFpHQResampler.cpp  AudioFpHQResampler.h  AudioIntResampler.cpp  AudioIntResampler.h  AudioQueue.cpp  AudioQueue.h  CopyAudioRenderer.cpp  CopyAudioRenderer.h  IAudioRenderer.cpp  IAudioRenderer.h  IAudioResampler.h  Makefile.am  Makefile.in  OssAudioRenderer.cpp  OssAudioRenderer.h  SdlAudioRenderer.cpp  SdlAudioRenderer.h  Statistic.cpp  Statistic.h  SunAudioRenderer.cpp  SunAudioRenderer.h  aviplay.cpp  aviplay2.cpp  aviplay_impl.h  aviplayprop.cpp  aviplayth.cpp
lib/aviread/: AsfFileInputStream.cpp  AsfFileInputStream.h  AsfInputStream.h  AsfNetworkInputStream.cpp  AsfNetworkInputStream.h  AsfReadHandler.cpp  AsfReadHandler.h  AsfReadStream.cpp  AsfReadStream.h  AsfRedirectInputStream.cpp  AsfRedirectInputStream.h  AsfStreamSeekInfo.cpp  AsxReader.cpp  AsxReader.h  AviReadHandler.cpp  AviReadHandler.h  AviReadStream.cpp  AviReadStream.h  Cache.cpp  Cache.h  FFReadHandler.cpp  FFReadHandler.h  FFReadStream.cpp  FFReadStream.h  Makefile.am  Makefile.in  ReadFile.cpp  ReadHandlers.h  ReadStream.cpp  ReadStream.h  ReadStreamA.cpp  ReadStreamA.h  ReadStreamV.cpp  ReadStreamV.h  StreamInfo.cpp  StreamInfoPriv.h  asf_guids.cpp  asf_guids.h  asffmt.cpp  asffmt.h  (+1 more)
lib/aviwrite/: AviAudioWriteStream.cpp  AviVideoWriteStream.cpp  AviWrite.cpp  AviWrite.h  FileBuffer.h  Makefile.am  Makefile.in
lib/common/: Args.cpp  BaseError.cpp  BitmapInfo.cpp  Config.cpp  Config.h  Locker.cpp  Makefile.am  Makefile.in  Registry.cpp  String.cpp  avm_output.cpp  fcc_type.c  frame.h  image.cpp  impl_audio.cpp  impl_video.cpp  mmx.cpp  testimage.cpp  util.cpp  utils.c  vbrctrl.c  wave_type.c
lib/subtitle/: Makefile.am  Makefile.in  subread.c  subtest.c  subtitle.c  subwrite.c
lib/video/: Makefile.am  Makefile.in  VideoDPMS.cpp  renderer.cpp  rendlock.h  sub_ft.cpp  subrend.h
libavqt/: Makefile.am  Makefile.in  audc.cpp  audc.h  audc_p.cpp  audc_p.h  codecdialog.cpp  codecdialog.h  okdialog.cpp  okdialog.h  pixmapbutton.h  testcodecs.cpp
player/: Makefile.am  Makefile.in  action.cfg  actioncfg.cpp  actioncfg.h  configdialog.cpp  configdialog.h  configdialog_impl.cpp  configdialog_impl.h  decoder_config.cpp  decoder_config.h  main.cpp  playercontrol.cpp  playercontrol.h
plugins/: Makefile.am  Makefile.in
plugins/libac3pass/: Makefile.am  Makefile.emu  Makefile.in  README  README.ac3pass  ac3-iec958.c  ac3-iec958.h  fillplugins.h  libac3pass.cpp
plugins/libaudiodec/: Makefile.am  Makefile.in  a52.cpp  adpcm_impl.c  adpcm_impl.h  audiodecoder.cpp  aulaw.h  fillplugins.h  xa_gsm.c  xa_gsm.h  xa_gsm_state.h
plugins/libdivx4/: Makefile.am  Makefile.in  divx4.cpp  fillplugins.h  test.cpp
plugins/libffmpeg/: FFAudioDecoder.cpp  FFAudioDecoder.h  FFVideoDecoder.cpp  FFVideoDecoder.h  FFVideoEncoder.cpp  FFVideoEncoder.h  Makefile.am  Makefile.in  fillplugins.h  libffmpeg.cpp  testvideo.cpp
plugins/libmad/: Makefile.am  Makefile.in  fillplugins.h  libmad.cpp
plugins/libmp3lame_audioenc/: Makefile.am  Makefile.in  fillplugins.h  mp3encoder.cpp
plugins/libmp3lamebin_audioenc/: Makefile.am  Makefile.in  fillplugins.h  lame.h  lameencoder.cpp
plugins/libmpeg_audiodec/: Makefile.am  Makefile.in  bitwindow.cpp  fillplugins.h  filter.cpp  filter_2.cpp  huffmantable.cpp  mpeglayer1.cpp  mpeglayer2.cpp  mpeglayer3.cpp  mpegsound.h  mpegtable.cpp  mpegtoraw.cpp
plugins/libvorbis/: Makefile.am  Makefile.in  fillplugins.h  libvorbis.cpp
plugins/libwin32/: Makefile.am  Makefile.in  fillplugins.h  libwin32.cpp  libwin32.h  test.cpp  testaudio.cpp  testcodecs.cpp  testloader.c  testprepare.cpp  testvideo.cpp
plugins/libxvid/: Makefile.am  Makefile.in  fillplugins.h  xvid.cpp
plugins/libxvid4/: Makefile.am  Makefile.in  fillplugins.h  xvid4.cpp
(+247 files in other folders)
