EXTRA_DIST = am_edit strip_fPIC.sh version.sh depcomp

CONFIG_CLEAN_FILES = depcomp

MAINTAINERCLEANFILES = Makefile.in \
 compile \
 config.cache \
 config.guess \
 config.log \
 config.status \
 config.sub \
 configure.ac \
 depcomp \
 install-sh \
 libtool \
 ltconfig \
 ltmain.sh \
 missing \
 mkinstalldirs
